--- a/templates/all_status.html
+++ b/templates/all_status.html
@@ -5,102 +5,289 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>NCL Ship Application Status</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-
-
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 <style>
-    h1 {
-        margin-bottom: 10px;
-        text-align: center;
-    }
-
-    th {
-        cursor: pointer;
-    }
-    
+       h1 {
+           margin-bottom: 10px;
+           text-align: center;
+       }
+       th {
+           cursor: pointer;
+       }
+       #loading {
+           display: none;
+           text-align: center;
+           margin: 20px 0;
+       }
 </style>
 </head>
 <body>
-    <div class="container-fluid">   
-       {% include 'static/navbar.html' %}
-        </div>
-    <div class="container mt-5"> 
-        <div class="mb-3 w-25">
-            <form id="command-form">
-                <select class="form-select" id="shipDropdown" >
-                    <option value ="">Select a ship first</option>
-                    <option value ="All">All Ships</option>
-                    <option value="Discovery">Discovery</option>
-                    <option value="Bliss">Bliss</option>
-                    <option value="Breakaway">Breakaway</option>
-                    <option value="Dawn">Dawn</option>
-                    <option value="Encore">Encore</option>
-                    <option value="Epic">Epic</option>
-                    <option value="Escape">Escape</option>
-                    <option value="Explorer">Explorer</option>
-                    <option value="Gem">Gem</option>
-                    <option value="Getaway">Getaway</option>
-                    <option value="Grandeur">Grandeur</option>
-                    <option value="Insignia">Insignia</option>
-                    <option value="Jade">Jade</option>
-                    <option value="Jewel">Jewel</option>
-                    <option value="Joy">Joy</option>
-                    <option value="Marina">Marina</option>
-                    <option value="Mariner">Mariner</option>
-                    <option value="Nautica">Nautica</option>
-                    <option value="Navigator">Navigator</option>
-                    <option value="Pride Of America">Pride Of America</option>
-                    <option value="Prima">Prima</option>
-                    <option value="Regatta">Regatta</option>
-                    <option value="Riviera">Riviera</option>
-                    <option value="Sirena">Sirena</option>
-                    <option value="Sky">Sky</option>
-                    <option value="Splendor">Splendor</option>
-                    <option value="Sun">Sun</option>
-                    <option value="Voyager">Voyager</option>
-                    <option value="Vista">Vista</option>
-                    <option value="Viva">Viva</option>
-                </select>
-                </form>
-            </div>       
-            
-            <div id="result" style="margin-top:20px;">
-            {% include 'ship_status_table.html' %}
-                
-            </div>
+<div class="container-fluid">
+   {% include 'static/navbar.html' %}
 </div>
-    
+<div class="container mt-5">
+<h1>Ship Application Status</h1>
+<div class="mb-3 w-25">
+<form id="command-form">
+<select class="form-select" id="shipDropdown" multiple="multiple">
+<option value="All">All Ships</option>
+<option value="Discovery">Discovery</option>
+<option value="Bliss">Bliss</option>
+<option value="Breakaway">Breakaway</option>
+<option value="Dawn">Dawn</option>
+<option value="Encore">Encore</option>
+<option value="Epic">Epic</option>
+<option value="Escape">Escape</option>
+<option value="Explorer">Explorer</option>
+<option value="Gem">Gem</option>
+<option value="Getaway">Getaway</option>
+<option value="Grandeur">Grandeur</option>
+<option value="Insignia">Insignia</option>
+<option value="Jade">Jade</option>
+<option value="Jewel">Jewel</option>
+<option value="Joy">Joy</option>
+<option value="Marina">Marina</option>
+<option value="Mariner">Mariner</option>
+<option value="Nautica">Nautica</option>
+<option value="Navigator">Navigator</option>
+<option value="Pearl">Pearl</option>
+<option value="PrideOfAmerica">Pride Of America</option>
+<option value="Prima">Prima</option>
+<option value="Regatta">Regatta</option>
+<option value="Riviera">Riviera</option>
+<option value="Sirena">Sirena</option>
+<option value="Spirit">Spirit</option>
+<option value="Sky">Sky</option>
+<option value="Splendor">Splendor</option>
+<option value="Star">Star</option>
+<option value="Sun">Sun</option>
+<option value="Voyager">Voyager</option>
+<option value="Vista">Vista</option>
+<option value="Viva">Viva</option>
+</select>
+</form>
+</div>
+<!-- Loading indicator -->
+<div id="loading">
+<span class="spinner-border" role="status" aria-hidden="true"></span>
+<span>Loading data...</span>
+</div>
+<!-- Results table -->
+<table class="table table-sm table-hover" id="myTable">
+<thead>
+<tr>
+<th onclick="sortTable(0)">Ship <i class="bi bi-arrow-down-up"></i></th>
+<th onclick="sortTable(1)">App Name <i class="bi bi-arrow-down-up"></i></th>
+<!-- <th onclick="sortTable(2)">MOD_DATE</th> -->
+<th onclick="sortTable(3)">Target ModDate (ODP)</th>
+<th>STRIIM Checkpoint Status</th>
+<th onclick="sortTable(4)">Status <i class="bi bi-arrow-down-up"></i></th>
+</tr>
+</thead>
+<tbody id="resultBody">
+<!-- Rows will be appended here by JavaScript -->
+</tbody>
+</table>
+</div>
+<script>
+   $(document).ready(function () {
+       const allShips = 'All';
+       let selectedShips = [];
+       let shipDataCache = {};
+       // Initialize Select2 for dropdown with multi-select
+       $('#shipDropdown').select2({
+           placeholder: 'Select ships',
+           allowClear: true
+       });
+       // Change event handler
+       $('#shipDropdown').on('change', function () {
+           const selected = $(this).val();
+           console.log("Selected: ", selected)
+           // Check if "All Ships" is selected
+           if (selected.includes(allShips)) {
+               // Prevent the event from being recursively triggered
+               if (selected.length > 1 || selectedShips.length > 1) {
+                   // If other ships are selected alongside "All Ships", reset to only "All Ships"
+                   $('#shipDropdown').val([allShips]).trigger('change.select2'); // Use 'change.select2' to avoid infinite recursion
+               } else {
+                   fetchAllShipsData();
+               }
+           } else {
+               selectedShips = selected;
+               fetchMultipleShipsData(selectedShips);
+           }
+       });
 
-    <script>
+       // Function to fetch data for all ships
+       function fetchAllShipsData() {
+           showLoading('Loading data for all ships...');
+           $.ajax({
+               url: '/striim/status-by-ship', // Adjust to your endpoint
+               type: 'GET', // Using GET for all ships
+               contentType: 'application/json',
+               success: function(response) {
+                console.log("RESPONSE: ", response)
+                   appendResultsToTable(response);
+               },
+               error: function(error) {
+                   console.error('Error fetching data for all ships:', error);
+                   $('#resultBody').append('<tr><td colspan="3" class="text-danger">Error loading data for all ships. Please try again later.</td></tr>');
+               },
+               complete: function() {
+                   hideLoading();
+               }
+           });
+       }
 
-        // Script to send post request when selecting a dropdown menu option
+// format date 
+function formattedDate(date, fqAppName) {
+   // Check if the date is undefined or not a valid Date object
+   if (!date) {
+       console.error("Invalid date provided: undefined");
+       return ''; // Return an empty string or a default message
+   }
+   const dateObj = new Date(date); // Create a Date object from the input
+   if (isNaN(dateObj.getTime())) {
+       console.error("Invalid date provided:", date);
+       return ''; // Return an empty string or a default message
+   }
+   // Check if the application name requires specific formatting
+   if (fqAppName === 'admin.cdc_fidelio_to_odp') {
+       return new Intl.DateTimeFormat('en-US', {
+           timeZone: 'America/New_York',
+           year: 'numeric',
+           month: '2-digit',
+           day: '2-digit',
+           hour: '2-digit',
+           minute: '2-digit',
+           second: '2-digit',
+           hour12: false
+       }).format(dateObj);
+   }
+   // Handle other cases if needed
+   return new Intl.DateTimeFormat('en-US', {
+       timeZone: 'UTC',
+       year: 'numeric',
+       month: '2-digit',
+       day: '2-digit',
+       hour: '2-digit',
+       minute: '2-digit',
+       second: '2-digit',
+       hour12: false
+   }).format(dateObj);
+}
 
-        $('#shipDropdown').on('change', function() {
-            const ship = $(this).val();
-            console.log("Selected Ship:", ship);
-            $.ajax({
-                url: '/striim/status-by-ship',  // Endpoint on the Flask backend
-                type: 'POST',  // POST request
-                contentType: 'application/json',  // Setting the request content type
-                data: JSON.stringify({ "ship": ship }),  // Sending the selected value as JSON
-                beforeSend: function(){
-                    $('#result').html('<p>Loading...</p>');
-                },
-                success: function(response) {
-                    console.log("Response from Server:", response);  // Log the response from the server
-                    $('#result').html(response);  // Display the result
-                },
-                error: function(jqXHR, textStatus, errorThrown) {
-                    console.error('Error:', textStatus, errorThrown);  // Log any errors
-                    $('#result').html('<p class="text-danger">Error loading data. Please try again later</p>');
-                }
-            });
-        });
+// Checks to see if two dates are more than 3 hours. Using this in the appendResultsToTable to see if MOD_DATE - ETL_PROCESS_DATE is greater than 3 hours.
+// If so, then highlight row in red.
+function isDifferenceGreaterThanThreeHours(startDateTime, endDateTime) {
+   // Convert the date and time strings into Date objects
+   const startDate = new Date(startDateTime);
+   const endDate = new Date(endDateTime);
+   // Calculate the difference in milliseconds
+   const differenceInMilliseconds = endDate - startDate;
+   // Convert milliseconds to hours
+   const differenceInHours = differenceInMilliseconds / (1000 * 60 * 60);
+   // Check if the difference is greater than 3 hours
+   return differenceInHours > 3 ? "table-danger" : "";
+}
+// Example usage
+const start = "2024-10-16T12:00:00"; // Start date and time
+const end = "2024-10-16T15:30:00";   // End date and time
+console.log(isDifferenceGreaterThanThreeHours(start, end)); // Output: "No"
 
-    // Sort table by ASC/DESC 
-    function sortTable(columnIndex) {
+       // Function to fetch data for multiple ships
+       function fetchMultipleShipsData(ships) {
+           showLoading('Loading data for selected ships...');
+           const postRequests = ships.map(ship => {
+               if (shipDataCache[ship]) {
+                   return Promise.resolve(shipDataCache[ship]);
+               }
+               const payload = { "ship": ship };
+               return $.ajax({
+                   url: '/striim/status-by-ship',
+                   type: 'POST',
+                   contentType: 'application/json',
+                   data: JSON.stringify(payload)  // Send data as JSON
+               }).then(response => {
+                   shipDataCache[ship] = response;
+                   return response;
+               });
+           });
+           Promise.all(postRequests)
+               .then(responses => {
+                   appendResultsToTable(responses);
+               })
+               .catch(error => {
+                   console.error('Error with one or more requests:', error);
+                   $('#resultBody').append('<tr><td colspan="3" class="text-danger">Error loading data for some ships. Please try again later.</td></tr>');
+               })
+               .finally(() => {
+                   hideLoading();
+               });
+       }
+      
+       // Function to append results to the table
+       function appendResultsToTable(responses) {
+   $('#resultBody').empty();
+   if (!Array.isArray(responses)) {
+       responses = [responses];
+   }
+   responses.forEach((response, index) => {
+       console.log("RESPONSE: ", response);
+       if (typeof response === 'object' && Object.keys(response).length) {
+           for (const shipName in response) {
+               console.log("RESPONSE 2: ", response);
+               if (response.hasOwnProperty(shipName)) {
+                   const shipData = response[shipName];
+                   console.log("SHIP DATA: ", shipData);
+                   // Iterate over each application in shipData
+                   for (const appKey in shipData) {
+                       if (shipData.hasOwnProperty(appKey)) {
+                           const appHealthMap = shipData[appKey];
+                           console.log("APPHEALTH MAP: ", appHealthMap);
+                           const fqAppName = appHealthMap.appName || "Unknown App Name";
+                           const status = appHealthMap.status || "No Status";
+                           const rowDangerClass = status === 'HALT' ? 'table-danger' : '';
+                           // Initialize formattedModDate with a default value
+                           let formattedModDate = ""; // Default value
+                           // Handling sqlHealth if it exists
+                           if (appHealthMap.sqlHealth) {
+                               const modDate = appHealthMap.sqlHealth.data.mod_date || "No Modification Date";
+                               formattedModDate = formattedDate(modDate, fqAppName);
+                           }
+                           const row = `<tr class="${rowDangerClass}">
+<td>${shipName}</td>
+<td>${fqAppName}</td>
+<td>${formattedModDate}</td>
+<td></td>
+<td>${status}</td>
+</tr>`;
+                           $('#resultBody').append(row);
+                       }
+                   }
+               }
+           }
+       } else {
+           const ship = selectedShips[index] || "Unknown Ship";
+           // Handle response without ship data
+           $('#resultBody').append(`<tr><td>${ship}</td><td colspan="4" class="text-danger">No health records available</td></tr>`);
+       }
+   });
+}
+       // Function to show loading spinner
+       function showLoading(message) {
+           $('#loading').show().find('span').last().text(message);
+       }
+       // Function to hide loading spinner
+       function hideLoading() {
+           $('#loading').hide();
+       }
+   });
+   
+ // Sort table by ASC/DESC 
+ function sortTable(columnIndex) {
    var table, rows, switching, i, x, y, shouldSwitch, dir, switchCount = 0;
    table = document.getElementById("myTable");
    switching = true;
@@ -108,16 +295,20 @@
    while (switching) {
        switching = false;
        rows = table.rows;
-       for (i = 0; i < (rows.length - 1); i++) {
+       // Loop through all table rows (except the headers)
+       for (i = 1; i < (rows.length - 1); i++) {
            shouldSwitch = false;
+           // Get the two elements to compare, one from current row and the next row
            x = rows[i].getElementsByTagName("TD")[columnIndex];
            y = rows[i + 1].getElementsByTagName("TD")[columnIndex];
-           if (dir === "asc") {
+           // Check if the two rows should switch place, based on the direction
+           if (dir == "asc") {
                if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+                   // If so, mark as a switch and break the loop
                    shouldSwitch = true;
                    break;
                }
-           } else if (dir === "desc") {
+           } else if (dir == "desc") {
                if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
                    shouldSwitch = true;
                    break;
@@ -125,10 +316,12 @@
            }
        }
        if (shouldSwitch) {
+           // Perform the switch and mark that a switch has been done
            rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
            switching = true;
            switchCount++;
        } else {
+           // If no switching has been done and the direction is "asc", switch to "desc"
            if (switchCount == 0 && dir == "asc") {
                dir = "desc";
                switching = true;
@@ -136,7 +329,8 @@
        }
    }
 }
-     </script>
-     
+
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
