--- a/templates/static/navbar.html
+++ b/templates/static/navbar.html
@@ -2,10 +2,16 @@
  <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <ul class="nav nav-pills">
         <li class="nav-item">
-        <a class="nav-link {% if active_page == 'interactive_cli' %}active{% endif %}" aria-current="page" href="/">Interactive CLI</a>
+        <a class="nav-link {% if active_page == 'interactive_cli' %}active{% endif %}" aria-current="page" href="/">STRIIM App CLI</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link {% if active_page == 'status' %}active{% endif %}" aria-current="page" href="/striim/status-all">Status</a>
+        <a class="nav-link {% if active_page == 'status' %}active{% endif %}" aria-current="page" href="/striim/status-all">App Status</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link {% if active_page == 'linux-cli' %}active{% endif %}" aria-current="page" href="/execute-command-form">Linux CLI</a>
+            </li>
+        <li class="nav-item">
+            <a class="nav-link {% if active_page == 'logout' %}active{% endif %}" aria-current="page" href="/logout">Logout</a>
         </li>
         <!-- <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
